RESOLVED FIXED44250
[Qt] Fix cursor change propagation
https://bugs.webkit.org/show_bug.cgi?id=44250
Summary [Qt] Fix cursor change propagation
Balazs Kelemen
Reported 2010-08-19 04:58:40 PDT
Cursor change propagation should go through the HostWindow for being compatible with WebKit2.
Attachments
proposed patch (2.98 KB, patch)
2010-08-19 07:38 PDT, Balazs Kelemen
kenneth: review+
commit-queue: commit-queue-
ch fixed (2.75 KB, patch)
2010-08-19 16:12 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2010-08-19 07:38:00 PDT
Created attachment 64850 [details] proposed patch Second part of the changes started in bug 44062.
WebKit Commit Bot
Comment 2 2010-08-19 10:00:34 PDT
Comment on attachment 64850 [details] proposed patch Rejecting patch 64850 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--wait-for-httpd', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Last 500 characters of output: LayoutTests Testing 20876 test cases. media/video-pause-empty-events.html -> timed out Sampling process 67564 for 10 seconds with 10 milliseconds of run time between samples Sampling completed, processing symbols... Sample analysis of process 67564 written to file /Users/eseidel/Library/Logs/DumpRenderTree/HangReport.txt Exiting early after 1 failures. 17229 tests run. 677.54s total testing time 17228 test cases (99%) succeeded 1 test case (<1%) timed out 34 test cases (<1%) had stderr output Full output: http://queues.webkit.org/results/3796077
Antonio Gomes
Comment 3 2010-08-19 12:35:47 PDT
Comment on attachment 64850 [details] proposed patch > diff --git a/WebKit/qt/ChangeLog b/WebKit/qt/ChangeLog > index 25e8fb3..2e18fa0 100644 > --- a/WebKit/qt/ChangeLog > +++ b/WebKit/qt/ChangeLog > @@ -1,3 +1,22 @@ > +2010-08-19 Balazs Kelemen <kb@inf.u-szeged.hu> > + > + Reviewed by NOBODY (OOPS!). > + > + [Qt] Fix cursor change propagation > + https://bugs.webkit.org/show_bug.cgi?id=44250 > + > + * WebCoreSupport/ChromeClientQt.cpp: > + (WebCore::ChromeClientQt::setCursor): Implemented. Propagete the callback forward to the PageClient. > + > +2010-08-19 Balazs Kelemen <kb@inf.u-szeged.hu> > + > + Reviewed by NOBODY (OOPS!). > + > + Need a short description and bug URL (OOPS!) > + > + * WebCoreSupport/ChromeClientQt.cpp: > + (WebCore::ChromeClientQt::setCursor): > + > 2010-08-17 Laszlo Gombos <laszlo.1.gombos@nokia.com> > > Reviewed by Ariya Hidayat. Fix the doubled change log entry, please.
Balazs Kelemen
Comment 4 2010-08-19 16:08:28 PDT
> Fix the doubled change log entry, please. Oops, sorry, going to fix immediately.
Balazs Kelemen
Comment 5 2010-08-19 16:12:11 PDT
Created attachment 64906 [details] ch fixed cq? again since I think the failing test was a flaky one.
Antonio Gomes
Comment 6 2010-08-19 16:17:34 PDT
Comment on attachment 64906 [details] ch fixed r=me
WebKit Commit Bot
Comment 7 2010-08-19 18:16:19 PDT
Comment on attachment 64906 [details] ch fixed Rejecting patch 64906 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--wait-for-httpd', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Running build-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 20884 test cases. media/video-preload.html -> crashed Exiting early after 1 failures. 17248 tests run. 656.80s total testing time 17247 test cases (99%) succeeded 1 test case (<1%) crashed 37 test cases (<1%) had stderr output Full output: http://queues.webkit.org/results/3721346
WebKit Commit Bot
Comment 8 2010-08-19 19:52:22 PDT
Comment on attachment 64906 [details] ch fixed Clearing flags on attachment: 64906 Committed r65722: <http://trac.webkit.org/changeset/65722>
WebKit Commit Bot
Comment 9 2010-08-19 19:52:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.