2010-08-19  Balazs Kelemen  <kb@inf.u-szeged.hu>

Reviewed by Antonio Gomes.

        [Qt] Fix cursor change propagation
        https://bugs.webkit.org/show_bug.cgi?id=44250

        No functional change so new tests.

        Propagate the setCursor callback to the PageClient via the HostWindow instead of preassuming
        the concrete type of the ChromeClient (what was generally wrong and actually incompatible with WebKit2).
        * platform/qt/WidgetQt.cpp:
        (WebCore::Widget::setCursor):
2010-08-19  Balazs Kelemen  <kb@inf.u-szeged.hu>

        Reviewed by Antonio Gomes.

        [Qt] Fix cursor change propagation
        https://bugs.webkit.org/show_bug.cgi?id=44250

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::setCursor): Implemented. Propagete the callback forward to the PageClient.

Canonical link: https://commits.webkit.org/56502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65722 268f45cc-cd09-0410-ab3c-d52691b4dbfc